--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -1804,9 +1804,10 @@ tbody tr:hover {
         .name,
         .summary {
           color: var(--dark-blue);
+          margin-bottom: 1rem;
         }
         .link {
-          color: var(--teal) !important;
+          color: var(--teal);
         }
       }
     }
