--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -1825,9 +1825,11 @@ tbody tr:hover {
 .pagination {
   .page-numbers li {
     border-color: var(--dark-blue);
+    a {
+      color: var(--dark-blue);
+    }
   }
 
-  li a,
   a.next,
   a.prev {
     color: var(--dark-blue);
