--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -56,6 +56,10 @@ h3.modal-title {
   color: #fff !important;
 }
 
+.modal-content .modal-header {
+  background-color: var(--primary-color) !important;
+}
+
 h4 {
   font-size: 30px;
   font-weight: 500;
