--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -1316,19 +1316,29 @@ ol {
     background-color: var(--primary-color);
     width: 100% !important;
     height: 100% !important;
-    min-height: 632px !important;
-    max-height: 632px !important;
     padding: 2rem 0;
+    background-size: cover;
+    
+    @media all and (min-width: 768px) {
+      min-height: 632px !important;
+      max-height: 632px !important;
+      background-size: contain;
+    }
     .event-info {
       background-color: var(--primary-color);
       right: auto;
       top: auto;
-      width: 33%;
+      width: 100%;
       min-width: 30%;
       height: auto;
-      bottom: 4rem;
+      bottom: 0;
       border-radius: 8px;
       justify-content: flex-end;
+
+      @media all and (min-width: 768px) {
+        width: 33%;
+        bottom: 4rem;
+      }
 
       h1 {
         color: var(--white-color) !important;
