--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -441,6 +441,10 @@ div.c-nav-centered__search > div {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-direction: column;
+    @media all and (min-width: 768px) {
+      flex-direction: row;
+    }
     .c-event-date-stub__wrapper {
       background-color: var(--light-gray);
 
@@ -461,10 +465,8 @@ div.c-nav-centered__search > div {
     }
 
     .c-event-date-stub__event-wrapper {
-      padding-left: 20px;
-      @media all and (min-width: 768px) {
-        padding: 0px;
-      }
+      padding: 0px;
+
       .c-event-date-stub__event-name {
         color: var(--dark-blue) !important;
         font-size: 24px !important;
@@ -474,6 +476,13 @@ div.c-nav-centered__search > div {
         padding: 0 0 10px;
         font-weight: 400;
         color: var(--text-color);
+      }
+
+      a {
+        text-align: center;
+        @media all and (min-width: 768px) {
+          text-align: left;
+        }
       }
     }
   }
