--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -1974,12 +1974,21 @@ h6 + h5 {
   }
 }
 
+h2:target {
+  padding-top: 3rem;
+  @media all and (min-width: 768px) {
+    padding-top: 11rem;
+  }
+}
+
+
 /* back to top functionality */
 .back-to-top {
   position: fixed;
   bottom: 10px;
   right: 10px;
   opacity: 0;
+  z-index: -2;
   background-color: var(--white-color);
   font-weight: 500;
   padding: 10px;
@@ -1987,14 +1996,27 @@ h6 + h5 {
   transition: all 0.5s;
 }
 
+/* .back-to-top:hover,
+.inner-content:has(.back-to-top):hover .back-to-top{ 
+  opacity: 1; 
+} */
+
 body:has(h2:target) .back-to-top {
   opacity: 1;
   translate: 0px;
 }
 
-h2:target {
-  padding-top: 3rem;
-  @media all and (min-width: 768px) {
-    padding-top: 11rem;
-  }
+body::before {
+  content: "";
+  background: white;
+  position: absolute;
+  bottom: 0; 
+  left: 0;
+  width: 100%; 
+  height: 10em;
+  z-index: -1; /* Behind the body */
+}
+
+main {
+  position: relative;
 }
