--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -1349,15 +1349,18 @@ ol {
       right: auto;
       top: auto;
       width: 100%;
+      max-width: 100%;
       min-width: 30%;
       height: auto;
       bottom: 0;
-      border-radius: 8px;
+      border-radius: 0;
       justify-content: flex-end;
 
       @media all and (min-width: 768px) {
         width: 33%;
+        max-width: 350px;
         bottom: 4rem;
+        border-radius: 8px;
       }
 
       h1 {
