--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -1190,6 +1190,10 @@ ol {
   text-decoration: underline;
 }
 
+.primary-call-out a.btn {
+  text-decoration: none;
+}
+
 .body-content.c-body-content__job-board .section {
   display: none;
 }
