update bg on blogs

--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -1870,6 +1870,14 @@ tbody tr:hover {
   }
 }
 
+/* blog details */
+
+body > div.body-content {
+  >.section>.background {
+    display: none;
+  }
+}
+
 /* search results */
 .search-container {
   .search-results {
